--- a/styles.css
+++ b/styles.css
@@ -28,19 +28,22 @@
 
 /* 이미지 슬라이더 스타일 */
 .slider {
+    position: relative; /* 부모 요소를 기준으로 자식들의 위치를 결정 */
+    width: 100%;
     height: 100vh;
-    display: flex;
     overflow: hidden;
-    position: relative;
 }
 
 .slide {
-    min-width: 100%;
+    position: absolute; /* 슬라이드들을 겹치도록 설정 */
+    top: 0;
+    left: 0;
+    width: 100%;
     height: 100%;
     background-size: cover;
     background-position: center;
-    transition: opacity 1s ease-in-out;
     opacity: 0;
+    transition: opacity 1s ease-in-out;
 }
 
 .slide.active {
